source/v3/getting-started/index.md
---
layout: page
group: docs-latest
order: 100
title: 安装与版本更新
short_title: 1-1 安装与版本更新
cover: true
meta:
  header: []
sidebar: [docs-latest, toc, repos]
---

<p>
{% span logo center large, <sup>&ensp;</sup>Volantis<sup>3</sup> %}
{% span center small, A Wonderful Theme for Hexo 5 %}
</p>
<br>

Volantis，一个高度模块化和可定制化、功能相对完善的 Hexo 博客主题，既可以用作个人博客，也适合用来搭建文档。

这些是使用了本主题的博客： {% btn 示例博客, /examples/, fas fa-play-circle %}

## 能力要求 {% span red, !!! %}

自建博客需要一定的相关知识，在开始前，请{% u 务必 %}确保：

{% checkbox checked, 已掌握 markdown 语法 %}
{% checkbox checked, 已阅读 Hexo 官方文档 %}
{% checkbox checked, 会使用终端（命令行），会使用 git  %}
{% checkbox red checked, 会阅读文档、搜索文档 %}

<br>

为了更好地使用，还建议掌握以下知识：

{% checkbox checked, 会阅读源码，知道本站源码在哪里，会参照源码仿写、对比差异 %}
{% checkbox checked, 规范地使用 GitHub Issues（解决文档中没有的问题） %}
{% checkbox checked, GitHub Fork、Pull Request 操作（使主题保持最新） %}

## 环境要求

如果您从旧版本更新或着其它主题迁移，请确保环境版本不要太低，否则会产生兼容性问题。


{% tabs install, 3 %}

<!-- tab Linux -->

```yaml
Hexo: 4.2 ~ 5.0
hexo-cli: 3.1 ~ 4.1
node.js: 12.16 ~ # LTS版
npm: 6.13 ~
```

<!-- endtab -->

<!-- tab Mac -->

```yaml
Hexo: 4.2 ~ 5.0
hexo-cli: 3.1 ~ 4.1
node.js: 12.16 ~ # LTS版
npm: 6.13 ~
```

使用脚本无要求。

<!-- endtab -->

<!-- tab Windows -->

```yaml
Hexo: 4.2 ~ 5.0
hexo-cli: 3.1 ~ 4.1
node.js: 12.16 ~ # LTS版
npm: 6.13 ~
```

<!-- endtab -->

{% endtabs %}

## 下载与安装

{% tabs install, 4 %}

<!-- tab Linux -->

..

<!-- endtab -->

<!-- tab Mac -->

在博客路径打开终端，下载安装并应用主题：
```sh
curl -s https://volantis.js.org/start | sh
```
如果您还没有博客，执行这行命令将会自动检测并安装所需环境，初始化博客，然后下载安装并应用主题。

{% noteblock link blue %}

脚本详细使用方法：[#hexo.sh](https://xaoxuu.com/wiki/hexo.sh/)

{% endnoteblock %}

<!-- endtab -->

<!-- tab Windows -->

..

<!-- endtab -->

<!-- tab 手动安装 -->

第 1/3 步：下载主题源码到 `themes/` 文件夹
```sh
git clone https://github.com/volantis-x/hexo-theme-volantis themes/volantis

# 或者使用国内镜像
git clone https://e.coding.net/volantis/volantis/volantis.git themes/volantis
```

第 2/3 步：修改站点配置文件
```yaml blog/_config.yml
theme: volantis
```

第 3/3 步：检查并安装依赖

```sh 安装 Hexo 搜索的依赖包：
npm i -S hexo-generator-search hexo-generator-json-content
```
```sh 安装 stylus 渲染器：
npm i -S hexo-renderer-stylus
```

<!-- endtab -->

{% endtabs %}

## 版本更新

请对照 [更新日志](https://github.com/volantis-x/hexo-theme-volantis/releases) 进行更新。

{% timeline %}

{% timenode 2020-07-24 [2.6.6 -> 3.0](https://github.com/volantis-x/hexo-theme-volantis/releases/tag/3.0) %}

1. 如果有 `hexo-lazyload-image` 插件，需要删除并重新安装最新版本，设置 `lazyload.isSPA: true`。
2. 2.x 版本的 css 和 js 不适用于 3.x 版本，如果使用了 `use_cdn: true` 则需要删除。
3. 2.x 版本的 fancybox 标签在 3.x 版本中被重命名为 gallery 。
4. 2.x 版本的置顶 `top: true` 改为了 `pin: true`，并且同样适用于 `layout: page` 的页面。
5. 如果使用了 `hexo-offline` 插件，建议卸载，3.0 版本默认开启了 pjax 服务。

{% endtimenode %}

{% timenode 2020-05-15 [2.6.3 -> 2.6.6](https://github.com/volantis-x/hexo-theme-volantis/releases/tag/2.6.6) %}

不需要额外处理。

{% endtimenode %}

{% timenode 2020-04-20 [2.6.2 -> 2.6.3](https://github.com/volantis-x/hexo-theme-volantis/releases/tag/2.6.3) %}

1. 全局搜索 `seotitle` 并替换为 `seo_title`。
2. group 组件的索引规则有变，使用 group 组件的文章内，`group: group_name` 对应的组件名必须是 `group_name`。
2. group 组件的列表名优先显示文章的 `short_title` 其次是 `title`。

{% endtimenode %}

{% endtimeline %}

## 许可协议

本主题采用 [MIT开源许可协议](https://cdn.jsdelivr.net/gh/theme-volantis/hexo-theme-volantis/LICENSE) ，永久无限制免费使用。

{% noteblock quote theme %}
**MIT开源许可协议**

被授权人有权利使用、复制、修改、合并、出版发行、散布、再授权及贩售软件及软件的副本。
被授权人可根据程式的需要修改授权条款为适当的内容。
在软件和软件的所有副本中都必须包含版权声明和许可声明。
{% endnoteblock %}

<br><br>{% btn large center, 向开发者反馈问题, https://github.com/volantis-x/hexo-theme-volantis/issues/ , fas fa-paper-plane %}
